[gd_scene load_steps=6 format=3 uid="uid://b44bbepn51tnq"]

[ext_resource type="Script" path="res://Level/level.gd" id="1_mk3io"]
[ext_resource type="PackedScene" uid="uid://blf8sca1n5do5" path="res://Level/Tile/CheckpointTile/checkpoint_tile.tscn" id="2_wkbkt"]
[ext_resource type="PackedScene" uid="uid://bcocs8d0wdou7" path="res://Level/Tile/tile.tscn" id="3_s4k1v"]
[ext_resource type="PackedScene" uid="uid://dbbc6rwhwarjw" path="res://Player/player.tscn" id="4_b7uai"]
[ext_resource type="Texture2D" uid="uid://c66x02ogiru4t" path="res://Player/battleship.png" id="5_7ax2e"]

[node name="Level" type="Node2D"]
script = ExtResource("1_mk3io")
checkpoint_scene = ExtResource("2_wkbkt")
tile_scene = ExtResource("3_s4k1v")
prewarm_size = 50
possible_colors = Array[Color]([Color(0, 0.811765, 0, 1), Color(0.054902, 0.254902, 0.0509804, 1), Color(0.654902, 0.647059, 0.435294, 1), Color(0.0235294, 0.192157, 0.14902, 1)])

[node name="Tiles" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("4_b7uai")]
position = Vector2(80, 170)
horizontal_speed = 30

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScoreLabel" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Score : "

[node name="Score" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 8
text = "0
"
horizontal_alignment = 2

[node name="HB_lives" type="HBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MarginContainer/HBoxContainer/HB_lives"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("5_7ax2e")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/MarginContainer/HBoxContainer/HB_lives"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("5_7ax2e")

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/MarginContainer/HBoxContainer/HB_lives"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("5_7ax2e")

[node name="HB_fuel" type="HBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RespawnTimer" type="Timer" parent="."]
process_mode = 3
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
